<?xml version='1.0' encoding='UTF-8'?>
<resources>
  <string name="icon">Icon</string>
  <string name="version" translatable="false">2.1</string>
  <string name="revision" translatable="false">dev</string>
  <string name="build_date" translatable="false">dev</string>
  <string name="about">About</string>
  <string name="about_author" translatable="false">© 2011–2015 Kervala</string>
  <string name="about_license">This application is published under GPLv3 licence:</string>
  <string name="about_support" translatable="false">http://code.google.com/p/android-comicsreader/</string>
  <string name="about_unrar_version">UnRAR version: %s</string>
  <string name="about_version">Version: %s</string>
  <string name="about_revision">Revision: %s</string>
  <string name="about_build_date">Build date: %s</string>
  <string name="licenses_waiting">Please wait while updating licenses…</string>
  <string name="album_downloading">Downloading \"%s\"…</string>
  <string name="app_name">Comics Reader</string>
  <string name="bookmark_help">You can enter either an absolute folder path starting with a / (such as /Pictures or /Download), or an URL (such as domain.com/comics/index.xml). If you omit http:// prefix, it will be added automatically if it doesn\'t start with a /. See \"Help\" for more details about \"Remote albums\".</string>
  <string name="bookmark_title">Title</string>
  <string name="bookmark_url">Folder or URL</string>
  <string name="bookmarks">Bookmarks</string>
  <string name="bookmarks_add">Add</string>
  <string name="bookmarks_edit">Edit</string>
  <string name="bookmarks_help">Please long press on a bookmark to edit or delete it.</string>
  <string name="bookmarks_load">Load</string>
  <string name="bookmarks_remove">Remove</string>
  <string name="bookmarks_title">Bookmarks manager</string>
  <string name="browse">Browse</string>
  <string name="browser_title">Browser</string>
  <string name="bytes">bytes</string>
  <string name="changelog">Changelog</string>
  <string name="close">Close</string>
  <string name="confirm_delete_album">Do you want to delete this album?</string>
  <string name="confirm_delete_bookmark">Do you want to delete this bookmark?</string>
  <string name="confirm_open_folder">This folder contains non images files. Do you want to open it as an album?</string>
  <string name="cover">Cover</string>
  <string name="dialog_album_delete">Delete</string>
  <string name="dialog_album_size">Size: %1$d %2$s</string>
  <string name="dialog_album_title">Title</string>
  <string name="dialog_confirm_title">Confirm</string>
  <string name="dialog_error_title">Error</string>
  <string name="dialog_progress_browser_message">Please wait while loading…</string>
  <string name="error_no_album_loaded">No file selected. Please use menu to choose a file.</string>
  <string name="error_no_connection_available">No Internet connection available.</string>
  <string name="error_no_external_storage">Can\'t find any external storage</string>
  <string name="error_no_room">There is no room to download this album on external storage.</string>
  <string name="error_out_of_memory">Out of memory, please decrease image quality or resolution in \"Settings\" or you can continue with current settings at your own risks.</string>
  <string name="error_unable_to_write">Unable to write on external storage.</string>
  <string name="external_storage">External storage</string>
  <string name="first_page">First page</string>
  <string name="help">Help</string>
  <string name="kbytes">KB</string>
  <string name="last_page">Last page</string>
  <string name="mbytes">MB</string>
  <string name="next_page">Next page</string>
  <string name="no">No</string>
  <string name="pages">Go to page</string>
  <string name="preference_category_advanced">Advanced settings</string>
  <string name="preference_category_cache">Cache</string>
  <string name="preference_category_view">View</string>
  <string name="preference_clear_cache_albums">Clear albums</string>
  <string name="preference_clear_cache_albums_summary">Delete all downloaded cached remote albums</string>
  <string name="preference_clear_cache_albums_toast">All downloaded albums have been cleared</string>
  <string name="preference_clear_cache_thumbnails">Clear thumbnails</string>
  <string name="preference_clear_cache_thumbnails_summary">Delete all generated or downloaded thumbnails</string>
  <string name="preference_clear_cache_thumbnails_toast">All thumbnails have been cleared</string>
  <string name="preference_double_page_label">Double page mode</string>
  <string name="preference_double_page_summary">Display two pages at once on the screen</string>
  <string name="preference_fast_scroll_label">Fast scroll</string>
  <string name="preference_fast_scroll_summary">Enables the thumb that can be dragged to quickly scroll through the list</string>
  <string name="preference_fit_to_screen_label">Fit to screen</string>
  <string name="preference_fit_to_screen_summary">Enlarge image if smaller than screen resolution</string>
  <string name="preference_full_screen_label">Fullscreen</string>
  <string name="preference_full_screen_summary">Hide the statusbar if possible</string>
  <string name="preference_high_quality_label">32bits colours</string>
  <string name="preference_high_quality_summary">Warning! This can descrease smoothness and use more memory</string>
  <string name="preference_overlay_duration_label">Page number</string>
  <string name="preference_overlay_duration_summary">Duration to display the page number</string>
  <string name="preference_overlay_duration_default" translatable="false">5000</string>
  <string name="preference_sample_label">Forced image scale</string>
  <string name="preference_sample_summary">Scale to apply at loading time on an image to save memory</string>
  <string name="preference_sample_default" translatable="false">0</string>
  <string name="preference_zoom_label">Zoom</string>
  <string name="preference_zoom_summary">Mode to scale pages</string>
  <string name="preference_zoom_default" translatable="false">1</string>
  <string name="preference_category_misc">Misc</string>
  <string name="preference_about">About ComicsReader</string>
  <string name="preference_about_summary">Version and 3rd party licenses</string>
  <string name="previous_page">Previous page</string>
  <string name="settings">Settings</string>
  <string name="yes">Yes</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="remember_password">Remember password</string>
  <string name="contributors_label">Contributors:</string>
  <string name="contributors">- Jules Blok (natural ordering of page numbers and auto-rotation implementation)\n- ultrapeer (Turkish translation and French typos)\n- Zufre (Spanish translation)\n- Kathjal on Transifex (Italian translation)\n- Shark103 on Transifex (Polish translation)\n- Xesusmosquera on Transifex (Galician translation)\n- Evropi on Transifex (Greek translation)\n- Anonymous (Russian translation)\n- Marcelo Ghelman on Transifex (Portuguese translation)</string>
  <string name="browser_album_title">No title</string>
  <string name="preference_edges_resistance_label">Edges resistance</string>
  <string name="preference_edges_resistance_summary">Resistance before switching page</string>
  <string name="preference_edges_resistance_default" translatable="false">1</string>
  <string name="preference_page_transition_speed_label">Page transition speed</string>
  <string name="preference_page_transition_speed_summary">Speed used for next/previous page transition animation</string>
  <string name="preference_page_transition_speed_default" translatable="false">2</string>
  <string name="preference_reading_direction_label">Right to left reading direction</string>
  <string name="preference_reading_direction_summary">Swipe to the left to switch to next page</string>
  <string name="preference_auto_rotate_label">Automatic orientation</string>
  <string name="preference_auto_rotate_summary">(Experimental) Changes the screen orientation to best fit each page</string>
  <string name="no_data">No data</string>
  <string name="fullscreen_notice">Please scroll from top to bottom to display options menu and leave fullscreen mode.</string>
  <string name="quit">Quit</string>
  <string name="thumbnail">Thumbnail</string>
  <string name="unknown">unknown</string>
</resources>
