<?xml version="1.0" encoding="utf-8"?>
<!--
 * ComicsReader is an Android application to read comics
 * Copyright (C) 2011-2012 Cedric OCHS
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_browse"
        android:icon="@drawable/ic_menu_archive"
        android:title="@string/browse"/>
    <item
        android:id="@+id/menu_bookmarks"
        android:icon="@drawable/ic_menu_star"
        android:title="@string/bookmarks"/>
    <item
        android:id="@+id/menu_pages"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/pages"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_menu_preferences"
        android:title="@string/settings"/>

</menu>
